    o Do not allow changes to frozen Image, ImageList, and Draw objects.
    o Raise TypeError if freeze method sent to Image::Info or ImageList::Montage
      object.
    o Added view method to Image, Image::View class
    o Added grayscale_pseudo_class method to Image class (GraphicsMagick 1.1)
    o Added radial_blur, random_threshold_channel methods to Image class
      (ImageMagick 6.0.0)
    o Added quantum_operator method to Image class (GraphicsMagick 1.1)
    o Added endian attribute to Image class
    o Deprecated random_channel_threshold method when linked with ImageMagick 6.0.0.

RMagick 1.4.0
    o Revised and updated documentation
    o Implemented enumeration values as instances of an Enum
      class. Based on a description by Paul Brannon in ruby-talk 79041.
    o Added HSLColorspace, HWBColorspace constants (ImageMagick 5.5.7,
      GraphicsMagick 1.0.2)
    o Added CopyCyanCompositeOp, CopyMagentaCompositeOp,
      CopyYellowCompositeOp, CopyBlackCompositeOp constants (ImageMagick 5.5.7,
      GraphicsMagick 1.1)
    o Added ReplaceCompositeOp. CopyCompositeOp constants (ImageMagick 6.0.0)
    o Added color_histogram to Image class. (ImageMagick 6.0.0, GraphicsMagick 1.1)
    o Added define method to Image::Info class (ImageMagick 6.0.0, GraphicsMagick 1.1)
    o Added tint, each_profile, channel_extrema, channel_compare,
      channel_depth, channel_mean, quantum_depth, preview, gamma_channel,
      negate_channel, bilevel_channel methods to Image class (ImageMagick 6.0.0)
    o Added get_exif_by_entry, get_exif_by_tag to Image class
    o Added border! method to Image class
    o Added fcmp, intensity methods to Pixel class
    o Added Version_long constant
    o The 'fuzz' attribute in the Image and ImageInfo classes now
      accepts a percentage value as well as a numeric value.
    o Added Geometry class and changed all methods that accept a geometry
      string to accept a Geometry object as well