@@ -1,4 +1,4 @@
-/* $Id: rmmain.c,v 1.50 2004/04/02 23:53:48 rmagick Exp $ */
+/* $Id: rmmain.c,v 1.51 2004/04/04 14:22:47 rmagick Exp $ */
 /*============================================================================\
 |                Copyright (C) 2004 by Timothy P. Hunter
 | Name:     rmmain.c
@@ -544,6 +544,7 @@ Init_RMagick(void)
     rb_define_method(Class_Image, "solarize", Image_solarize, -1);
     rb_define_method(Class_Image, "<=>", Image_spaceship, 1);
     rb_define_method(Class_Image, "spread", Image_spread, -1);
+    rb_define_method(Class_Image, "statistics", Image_statistics, 0);
     rb_define_method(Class_Image, "stegano", Image_stegano, 2);
     rb_define_method(Class_Image, "stereo", Image_stereo, 1);
     rb_define_method(Class_Image, "strip!", Image_strip_bang, 0);
@@ -1179,6 +1180,18 @@ Init_RMagick(void)
     Class_AffineMatrix = rb_struct_define(NULL, "sx", "rx", "ry", "sy", "tx", "ty", 0);
     rb_define_const(Module_Magick, "AffineMatrix", Class_AffineMatrix);
 
+#if defined(HAVE_GETIMAGESTATISTICS)
+    // These classes are defined for >= GM 1.1.
+
+    // Magick::Statistics
+    Class_Statistics = rb_struct_define(NULL, "red", "green", "blue", "opacity", 0);
+    rb_define_const(Module_Magick, "Statistics", Class_Statistics);
+    // Magick::ChannelStatistics
+    Class_StatisticsChannel = rb_struct_define(NULL, "max", "min", "mean", "stddev", "var", 0);
+    rb_define_const(Class_Statistics, "Channel", Class_StatisticsChannel);
+#endif
+
+
     // Magick::Primary
     Class_Primary = rb_struct_define(NULL, "x", "y", "z", 0);
     rb_define_method(Class_Primary, "to_s", PrimaryInfo_to_s, 0);
@@ -1267,7 +1280,7 @@ static void version_constants(void)
 
     rb_define_const(Module_Magick, "Version", rb_str_new2(PACKAGE_STRING));
     sprintf(long_version,
-        "This is %s ($Date: 2004/04/02 23:53:48 $) Copyright (C) 2004 by Timothy P. Hunter\n"
+        "This is %s ($Date: 2004/04/04 14:22:47 $) Copyright (C) 2004 by Timothy P. Hunter\n"
         "Built with %s\n"
         "Built for %s\n"
         "Web page: http://rmagick.rubyforge.org\n"
