@@ -8,7 +8,8 @@ RMagick 1.5.0
     o Added grayscale_pseudo_class method to Image class (GraphicsMagick 1.1)
     o Added radial_blur, random_threshold_channel methods to Image class
       (ImageMagick 6.0.0)
-    o Added quantum_operator method to Image class (GraphicsMagick 1.1)
+    o Added quantum_operator, statistics methods to Image class (GraphicsMagick 1.1)
+    o Support channel_extrema, channel_mean with GraphicsMagick 1.1
     o Added endian attribute to Image class
     o Deprecated random_channel_threshold method when linked with ImageMagick 6.0.0.
 
